<resources>
    <string name="app_name">Thriftr</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="itemPriceString">$%1$.2f</string>
    <string name="type_your_message">Type your message</string>
    <string name="seller">Seller</string>
    <string name="item_title">Item Title</string>
    <string name="item_price">Item Price</string>
    <string name="item_description">Item Description</string>
    <string name="seller_s_name">Seller\'s Name</string>
    <string name="attach_image">Attach Image</string>
    <string name="create_listing">Create Listing</string>
    <string name="thriftr">Thriftr</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title">Title:</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="buy">Buy</string>
</resources>